--- a/src/universe/autoware.universe/planning/behavior_path_planner/config/behavior_path_planner.param.yaml
+++ b/src/universe/autoware.universe/planning/behavior_path_planner/config/behavior_path_planner.param.yaml
@@ -1,9 +1,10 @@
 /**:
   ros__parameters:
-    planning_hz: 10.0
+    verbose: false
 
+    planning_hz: 10.0
     backward_path_length: 5.0
-    forward_path_length: 200.0
+    forward_path_length: 300.0
     backward_length_buffer_for_end_of_pull_over: 5.0
     backward_length_buffer_for_end_of_pull_out: 5.0
     minimum_pull_over_length: 16.0
@@ -28,8 +29,49 @@
     expected_front_deceleration: -1.0
     expected_rear_deceleration: -1.0
 
-    expected_front_deceleration_for_abort: -2.0
-    expected_rear_deceleration_for_abort: -2.5
+    expected_front_deceleration_for_abort: -1.0
+    expected_rear_deceleration_for_abort: -2.0
 
     rear_vehicle_reaction_time: 2.0
-    rear_vehicle_safety_time_margin: 2.0
+    rear_vehicle_safety_time_margin: 1.0
+
+    # USE ONLY WHEN THE OPTION COMPILE_WITH_OLD_ARCHITECTURE IS SET TO FALSE.
+    # https://github.com/autowarefoundation/autoware.universe/blob/main/planning/behavior_path_planner/CMakeLists.txt
+    # NOTE: The smaller the priority number is, the higher the module priority is.
+
+    # Change the 'enable_module' flag for the following modules to 'false' to try Autoware-Mini
+
+    lane_change:
+      enable_module: true
+      # enable_module: false
+      enable_simultaneous_execution: false
+      priority: 4
+      max_module_size: 1
+
+    pull_out:
+      enable_module: true
+      # enable_module: false
+      enable_simultaneous_execution: false
+      priority: 0
+      max_module_size: 1
+
+    side_shift:
+      enable_module: true
+      # enable_module: false
+      enable_simultaneous_execution: false
+      priority: 2
+      max_module_size: 1
+
+    pull_over:
+      enable_module: true
+      # enable_module: false
+      enable_simultaneous_execution: false
+      priority: 1
+      max_module_size: 1
+
+    avoidance:
+      enable_module: true
+      # enable_module: false
+      enable_simultaneous_execution: false
+      priority: 3
+      max_module_size: 1
