--- a/src/universe/autoware.universe/planning/behavior_path_planner/config/lane_change/lane_change.param.yaml
+++ b/src/universe/autoware.universe/planning/behavior_path_planner/config/lane_change/lane_change.param.yaml
@@ -2,6 +2,7 @@
   ros__parameters:
     lane_change:
       lane_change_prepare_duration: 4.0         # [s]
+      lane_changing_safety_check_duration: 8.0  # [s]
 
       minimum_lane_change_prepare_distance: 2.0 # [m]
       minimum_lane_change_length: 16.5          # [m]
@@ -14,12 +15,12 @@
       minimum_lane_change_velocity: 2.78        # [m/s]
       prediction_time_resolution: 0.5           # [s]
       maximum_deceleration: 1.0                 # [m/s2]
-      lane_change_sampling_num: 10
+      lane_change_sampling_num: 3
 
       # collision check
-      enable_collision_check_at_prepare_phase: true
+      enable_collision_check_at_prepare_phase: false
       prepare_phase_ignore_target_speed_thresh: 0.1 # [m/s]
-      use_predicted_path_outside_lanelet: true
+      use_predicted_path_outside_lanelet: false
       use_all_predicted_path: false
 
       # abort
