--- a/src/universe/autoware.universe/planning/obstacle_avoidance_planner/config/obstacle_avoidance_planner.param.yaml
+++ b/src/universe/autoware.universe/planning/obstacle_avoidance_planner/config/obstacle_avoidance_planner.param.yaml
@@ -61,7 +61,7 @@
     mpt:
       option:
         # TODO(murooka) enable the following. Currently enabling the flag makes QP so heavy
-        steer_limit_constraint: false # true
+        steer_limit_constraint: false
         visualize_sampling_num: 1
         enable_manual_warm_start: false
         enable_warm_start: true
