--- a/src/launcher/autoware_launch/autoware_launch/config/planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/avoidance/avoidance.param.yaml
+++ b/src/launcher/autoware_launch/autoware_launch/config/planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/avoidance/avoidance.param.yaml
@@ -2,26 +2,26 @@
 /**:
   ros__parameters:
     avoidance:
-      resample_interval_for_planning: 0.3               # [m]
-      resample_interval_for_output: 4.0                 # [m]
+      resample_interval_for_planning: 0.05              # [m]
+      resample_interval_for_output: 0.1                 # [m]
       detection_area_right_expand_dist: 0.0             # [m]
-      detection_area_left_expand_dist: 1.0              # [m]
+      detection_area_left_expand_dist: 0.0              # [m]
       drivable_area_right_bound_offset: 0.0             # [m]
       drivable_area_left_bound_offset: 0.0              # [m]
-      object_envelope_buffer: 0.3                       # [m]
+      object_envelope_buffer: 0.45                      # [m]
 
       # avoidance module common setting
       enable_bound_clipping: false
       enable_avoidance_over_same_direction: true
       enable_avoidance_over_opposite_direction: true
-      enable_update_path_when_object_is_gone: false
-      enable_force_avoidance_for_stopped_vehicle: false
+      enable_update_path_when_object_is_gone: true
+      enable_force_avoidance_for_stopped_vehicle: true
       enable_safety_check: false
       enable_yield_maneuver: false
       disable_path_update: false
 
       # for debug
-      publish_debug_marker: false
+      publish_debug_marker: true
       print_debug_info: false
 
       # avoidance is performed for the object type with true
@@ -30,10 +30,10 @@
         truck: true
         bus: true
         trailer: true
-        unknown: false
-        bicycle: false
-        motorcycle: false
-        pedestrian: false
+        unknown: true
+        bicycle: true #false
+        motorcycle: true #false
+        pedestrian: true #false
 
       # For target object filtering
       target_filtering:
@@ -42,14 +42,14 @@
         threshold_time_object_is_moving: 1.0            # [s]
         threshold_time_force_avoidance_for_stopped_vehicle: 10.0 # [s]
         # detection range
-        object_check_force_avoidance_clearance: 30.0    # [m]
-        object_check_forward_distance: 150.0            # [m]
-        object_check_backward_distance: 2.0             # [m]
+        object_check_force_avoidance_clearance: 1.0    # [m]
+        object_check_forward_distance: 10.0            # [m]
+        object_check_backward_distance: 0.0             # [m]
         object_check_goal_distance: 20.0                # [m]
         # filtering parking objects
-        threshold_distance_object_is_on_center: 1.0     # [m]
-        object_check_shiftable_ratio: 0.6               # [-]
-        object_check_min_road_shoulder_width: 0.5       # [m]
+        threshold_distance_object_is_on_center: 0.0     # [m]
+        object_check_shiftable_ratio: 0.0               # [-]
+        object_check_min_road_shoulder_width: 0.0       # [m]
         # lost object compensation
         object_last_seen_threshold: 2.0
 
@@ -65,21 +65,21 @@
       avoidance:
         # avoidance lateral parameters
         lateral:
-          lateral_collision_margin: 1.0                 # [m]
-          lateral_collision_safety_buffer: 0.7          # [m]
+          lateral_collision_margin: 0.1                 # [m]
+          lateral_collision_safety_buffer: 0.12          # [m]
           lateral_passable_safety_buffer: 0.0           # [m]
-          road_shoulder_safety_margin: 0.3              # [m]
+          road_shoulder_safety_margin: 0.0              # [m]
           avoidance_execution_lateral_threshold: 0.499
           max_right_shift_length: 5.0
           max_left_shift_length: 5.0
         # avoidance distance parameters
         longitudinal:
-          prepare_time: 2.0                             # [s]
+          prepare_time: 0.0                             # [s]
           longitudinal_collision_safety_buffer: 0.0     # [m]
-          min_prepare_distance: 1.0                     # [m]
-          min_avoidance_distance: 10.0                  # [m]
-          min_nominal_avoidance_speed: 7.0              # [m/s]
-          min_sharp_avoidance_speed: 1.0                # [m/s]
+          min_prepare_distance: 0.0                     # [m]
+          min_avoidance_distance: 0.0                  # [m]
+          min_nominal_avoidance_speed: 0.5              # [m/s]
+          min_sharp_avoidance_speed: 0.5                # [m/s]
 
       # For yield maneuver
       yield:
