--- a/src/launcher/autoware_launch/autoware_launch/config/planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/drivable_area_expansion.param.yaml
+++ b/src/launcher/autoware_launch/autoware_launch/config/planning/scenario_planning/lane_driving/behavior_planning/behavior_path_planner/drivable_area_expansion.param.yaml
@@ -3,27 +3,27 @@
     # Static expansion
     avoidance:
       drivable_area_right_bound_offset: 0.0
-      drivable_area_left_bound_offset: 0.0
+      drivable_area_left_bound_offset: 1.0
       drivable_area_types_to_skip: [road_border]
     lane_change:
-      drivable_area_right_bound_offset: 0.0
-      drivable_area_left_bound_offset: 0.0
+      drivable_area_right_bound_offset: -0.5
+      drivable_area_left_bound_offset: 1.0
       drivable_area_types_to_skip: [road_border]
     lane_following:
-      drivable_area_right_bound_offset: 0.0
-      drivable_area_left_bound_offset: 0.0
+      drivable_area_right_bound_offset: -0.67 ##-0.70
+      drivable_area_left_bound_offset: -0.17 #-0.15
       drivable_area_types_to_skip: [road_border]
     pull_out:
-      drivable_area_right_bound_offset: 0.0
-      drivable_area_left_bound_offset: 0.0
+      drivable_area_right_bound_offset: -0.5
+      drivable_area_left_bound_offset: 1.0
       drivable_area_types_to_skip: [road_border]
     pull_over:
-      drivable_area_right_bound_offset: 0.0
-      drivable_area_left_bound_offset: 0.0
+      drivable_area_right_bound_offset: -0.5
+      drivable_area_left_bound_offset: 1.0
       drivable_area_types_to_skip: [road_border]
     side_shift:
-      drivable_area_right_bound_offset: 0.0
-      drivable_area_left_bound_offset: 0.0
+      drivable_area_right_bound_offset: -0.5
+      drivable_area_left_bound_offset: 1.0
       drivable_area_types_to_skip: [road_border]
 
     # Dynamic expansion by projecting the ego footprint along the path
